<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/home_fragment">

    <fragment
        android:id="@+id/splash_fragment"
        android:name="com.booking.app.ui.splash.SplashFragment"
        android:label="@string/splash_label"
        tools:layout="@layout/splash_fragment">

        <action
            android:id="@+id/action_splash_fragment_to_home_fragment"
            app:destination="@id/home_fragment"
            app:enterAnim="@anim/enter_from_right"
            app:exitAnim="@anim/fade"
            app:popUpTo="@id/splash_fragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/home_fragment"
        android:name="com.booking.app.ui.home.HomeFragment"
        android:label="@string/home_label"
        tools:layout="@layout/home_fragment" />


    <dialog
        android:id="@+id/dialog_fragment"
        android:name="com.booking.app.ui.dialog.DialogFragment"
        android:label="@string/dialog_label"
        tools:layout="@layout/dialog_fragment" />
</navigation>